--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ ul{
     color: #fff;
 }
 .connect a{
-    display: inline-block;
+    display: block;
     color: rgba(0,0,0,0.8);
     text-decoration: none;
     background-color: rgb(255, 255, 255);
