--- a/css/styles.css
+++ b/css/styles.css
@@ -67,8 +67,11 @@ ul{
     font-weight: 500;
     color: #fff;
 }
-.connect a{
+.connect{
     display: block;
+}
+.connect a{
+    display: inline-block;
     color: rgba(0,0,0,0.8);
     text-decoration: none;
     background-color: rgb(255, 255, 255);
