--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,19 @@ nav{
     justify-content: center;
     align-items: center;
 }
+.service-section .offered-services{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 5px;
+    text-align: center;
+    margin-top: 20px;
+}
+.service-section .offered-services .service1{
+    background-color: #475569;
+    padding: 100px 0;
+    width: 100%;
+}
 @media (max-width: 768px){
     .nav-menu{
         position: fixed;
@@ -164,5 +177,10 @@ nav{
         padding: 0;
         box-sizing: border-box;
         line-height: 1.3;
+    }
+    .service-section .offered-services{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 5px;
     }
 }
